--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -38,5 +38,17 @@
         android:text="Name"
         android:textSize="12sp" />
 
+    <TextView
+        android:id="@+id/itemPrice"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/itemName"
+        android:layout_alignParentRight="true"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_toRightOf="@id/icon"
+        android:gravity="center_vertical"
+        android:text="Price"
+        android:textSize="12sp" />
+
 
 </RelativeLayout>
