Register amb doble password

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,6 +26,12 @@
         android:layout_height="wrap_content"
         android:hint="Enter Password" />
 
+    <EditText
+        android:id="@+id/passwordText2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Repeat Password" />
+
     <Button
         android:id="@+id/btn_register"
         android:layout_width="wrap_content"
