--- a/app/src/main/res/layout/activity_multi.xml
+++ b/app/src/main/res/layout/activity_multi.xml
@@ -1,9 +1,19 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="14dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
+        android:padding="0dp"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:visibility="gone"
+        android:indeterminate="true" />
 
     <ImageButton
         android:id="@+id/Button_tienda"
@@ -79,7 +89,6 @@
         android:textStyle="bold"
         android:onClick="onClickEliminarCuenta"/>
 
-    <!-- Nuevo botón de logout centrado abajo -->
     <Button
         android:id="@+id/Button_logout"
         android:layout_width="250dp"
@@ -95,8 +104,9 @@
         android:textSize="18sp"
         android:onClick="onClickLogout" />
 
-
 </RelativeLayout>
+
+
 
 
 
