--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -64,4 +64,16 @@
         android:ellipsize="end"
         android:gravity="start" />
 
+    <Button
+        android:id="@+id/Comprar"
+        android:layout_width="134dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="17dp"
+        android:text="Comprar" />
+
 </RelativeLayout>
