--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+
     <Button
         android:id="@+id/BotonRetroceder"
         android:layout_width="40dp"
@@ -16,64 +17,59 @@
         android:background="@android:drawable/ic_menu_close_clear_cancel"
         android:backgroundTint="#070707"
         android:onClick="onClickBotonRetroceder" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NEW USER"
+        android:text="CHANGE PASSWORD"
         android:textSize="24sp"
         android:layout_gravity="center"
-        android:fontFamily="fantasy"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="fantasy"/>
 
     <EditText
-        android:id="@+id/usernameText"
+        android:id="@+id/ActualPasswordText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Username"
-        android:fontFamily="fantasy"
+        android:hint="Enter the actual password"
         android:layout_marginBottom="16dp"
+        android:fontFamily="fantasy"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
 
     <EditText
-        android:id="@+id/correoText"
+        android:id="@+id/NewPassword1Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Mail"
-        android:fontFamily="fantasy"
+        android:hint="Enter the new password"
         android:layout_marginBottom="16dp"
+        android:fontFamily="fantasy"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
 
     <EditText
-        android:id="@+id/passwordText"
+        android:id="@+id/NewPassword2Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Password"
-        android:inputType="textPassword"
-        android:fontFamily="fantasy"
+        android:hint="Repeat the new password"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
-
-    <EditText
-        android:id="@+id/passwordText2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Repeat Password"
-        android:inputType="textPassword"
         android:fontFamily="fantasy"
-        android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
 
     <Button
-        android:id="@+id/btn_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btn_change"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:paddingHorizontal="16dp"
         android:layout_gravity="center"
-        android:onClick="onClick"
-        android:text="Register"
+        android:layout_marginBottom="16dp"
+        android:onClick="onClickChange"
+        android:text="Change"
+        android:background="@drawable/button_gradient"
         android:fontFamily="fantasy"
-        android:background="@drawable/button_gradient" />
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
+
 </LinearLayout>
