--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,34 +10,71 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="LOGIN"
         android:textSize="24sp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="fantasy"/>
 
     <EditText
         android:id="@+id/usernameText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Username" />
+        android:hint="Enter Username"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="fantasy"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
 
     <EditText
         android:id="@+id/passwordText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Password" />
+        android:hint="Enter Password"
+        android:inputType="textPassword"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="fantasy"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:paddingHorizontal="16dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
         android:onClick="onClickLogin"
-        android:text="Login" />
+        android:text="Login"
+        android:background="@drawable/button_gradient"
+        android:fontFamily="fantasy"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:paddingHorizontal="16dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
         android:onClick="onClickRegister"
-        android:text="Register" />
+        android:text="Register"
+        android:background="@drawable/button_gradient"
+        android:fontFamily="fantasy"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
+    <Button
+        android:id="@+id/btn_recuperarpassword"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:paddingHorizontal="16dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
+        android:onClick="onClickRecovery"
+        android:text="Password Recovery"
+        android:background="@drawable/button_gradient"
+        android:fontFamily="fantasy"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
 </LinearLayout>
