--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -74,6 +74,7 @@
         android:layout_marginStart="248dp"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="17dp"
-        android:text="Comprar" />
+        android:text="Comprar"
+        android:background="@drawable/button_gradient"/>
 
 </RelativeLayout>
