--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,4 +88,10 @@
         android:fontFamily="fantasy"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switchBBDD"
+        android:layout_width="163dp"
+        android:layout_height="wrap_content"
+        android:text="Connect to DB?" />
 </LinearLayout>
