--- a/app/src/main/res/layout/activity_multi.xml
+++ b/app/src/main/res/layout/activity_multi.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -132,6 +133,17 @@
         android:textStyle="bold"
         android:textSize="18sp"
         android:onClick="onClickLogout" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="87dp"
+        android:layout_height="70dp"
+        android:layout_alignBottom="@+id/Button_tienda"
+        android:layout_marginEnd="149dp"
+        android:layout_marginBottom="2dp"
+        android:layout_toStartOf="@+id/Button_tienda"
+        android:onClick="onClickForum"
+        app:srcCompat="@android:drawable/stat_notify_chat" />
 
 </RelativeLayout>
 
