Chat individual fet

--- a/app/src/main/res/layout/activity_multi.xml
+++ b/app/src/main/res/layout/activity_multi.xml
@@ -5,32 +5,56 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="87dp"
+        android:layout_height="21dp"
+        android:layout_above="@+id/imageButton"
+        android:layout_alignStart="@+id/imageButton"
+        android:layout_alignEnd="@+id/imageButton"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="2dp"
+        android:text="Forum"
+        android:textAlignment="center" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="87dp"
+        android:layout_height="70dp"
+        android:layout_alignBottom="@+id/Button_tienda"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="-4dp"
+        android:layout_toStartOf="@+id/Button_tienda"
+        android:onClick="onClickPrivate"
+        app:srcCompat="@android:drawable/stat_notify_chat" />
+
     <ProgressBar
         android:id="@+id/progressBar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="14dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="5dp"
+        android:indeterminate="true"
         android:padding="0dp"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:visibility="gone"
-        android:indeterminate="true" />
+        android:visibility="gone" />
 
     <ImageButton
         android:id="@+id/Button_tienda"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:scaleType="centerInside"
-        android:adjustViewBounds="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:adjustViewBounds="true"
         android:background="@android:color/transparent"
         android:contentDescription="Ir a la tienda"
-        android:src="@drawable/shop"
-        android:onClick="onClickTienda"/>
+        android:onClick="onClickTienda"
+        android:scaleType="centerInside"
+        android:src="@drawable/shop" />
 
     <Button
         android:id="@+id/Button_misobjetos"
@@ -55,11 +79,11 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/button_gradient"
+        android:fontFamily="fantasy"
+        android:onClick="onClickPlay"
         android:text="Play"
         android:textColor="#000000"
-        android:fontFamily="fantasy"
-        android:textStyle="bold"
-        android:onClick="onClickPlay"/>
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/Button_Mispersonajes"
@@ -70,25 +94,25 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/button_gradient"
         android:fontFamily="fantasy"
+        android:onClick="onClickMispersonajes"
         android:text="Mis personajes"
         android:textColor="#000000"
-        android:textStyle="bold"
-        android:onClick="onClickMispersonajes"/>
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/Button_VenderCobre"
         android:layout_width="115dp"
         android:layout_height="115dp"
         android:layout_below="@id/Button_misobjetos"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="60dp"
-        android:layout_alignParentEnd="true"
-        android:text="Vender Cobre"
-        android:textColor="#000000"
         android:background="@drawable/button_gradient"
         android:fontFamily="fantasy"
-        android:textStyle="bold"
-        android:onClick="onClickVenderCobre"/>
+        android:onClick="onClickVenderCobre"
+        android:text="Vender Cobre"
+        android:textColor="#000000"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/Button_VerMisDatos"
@@ -109,15 +133,15 @@
         android:layout_width="115dp"
         android:layout_height="115dp"
         android:layout_below="@id/Button_VenderCobre"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="60dp"
-        android:layout_alignParentEnd="true"
-        android:text="Eliminar cuenta"
-        android:textColor="#000000"
         android:background="@drawable/button_gradient"
         android:fontFamily="fantasy"
-        android:textStyle="bold"
-        android:onClick="onClickEliminarCuenta"/>
+        android:onClick="onClickEliminarCuenta"
+        android:text="Eliminar cuenta"
+        android:textColor="#000000"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/Button_logout"
@@ -127,12 +151,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:background="@drawable/button_gradient_logout"
+        android:fontFamily="sans-serif-medium"
+        android:onClick="onClickLogout"
         android:text="Logout"
         android:textColor="#FFFFFF"
-        android:fontFamily="sans-serif-medium"
-        android:textStyle="bold"
         android:textSize="18sp"
-        android:onClick="onClickLogout" />
+        android:textStyle="bold" />
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -140,10 +164,23 @@
         android:layout_height="70dp"
         android:layout_alignBottom="@+id/Button_tienda"
         android:layout_marginEnd="149dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="-4dp"
         android:layout_toStartOf="@+id/Button_tienda"
         android:onClick="onClickForum"
         app:srcCompat="@android:drawable/stat_notify_chat" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="87dp"
+        android:layout_height="21dp"
+        android:layout_above="@+id/imageButton"
+        android:layout_alignStart="@+id/imageButton2"
+        android:layout_alignEnd="@+id/imageButton2"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        android:text="Private"
+        android:textAlignment="center" />
 
 </RelativeLayout>
 
