--- a/app/src/main/res/layout/activity_forum.xml
+++ b/app/src/main/res/layout/activity_forum.xml
@@ -44,7 +44,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="569dp"
         android:layout_marginTop="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
