--- a/app/src/main/res/layout/row_forum_layout.xml
+++ b/app/src/main/res/layout/row_forum_layout.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="77dp"
         android:background="@drawable/item_background"
         android:padding="12dp"
         tools:ignore="MissingConstraints"> <!-- Fondo para cada item -->
