--- a/app/src/main/res/layout/activity_my_data.xml
+++ b/app/src/main/res/layout/activity_my_data.xml
@@ -96,4 +96,15 @@
         android:fontFamily="fantasy"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="14dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
+        android:padding="0dp"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:visibility="gone"
+        android:indeterminate="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
