--- a/app/src/main/res/layout/activity_change_correo.xml
+++ b/app/src/main/res/layout/activity_change_correo.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="18dp"
         android:background="@android:drawable/ic_menu_close_clear_cancel"
         android:backgroundTint="#070707"
-        android:onClick="onClickBotonRetroceder" />
+        android:onClick="onClickBotonExit" />
 
     <TextView
         android:layout_width="wrap_content"
