--- a/app/src/main/res/layout/activity_items.xml
+++ b/app/src/main/res/layout/activity_items.xml
@@ -37,7 +37,7 @@
         android:layout_marginEnd="18dp"
         android:background="@android:drawable/ic_menu_close_clear_cancel"
         android:backgroundTint="#070707"
-        android:onClick="onClickBotonRetroceder" />
+        android:onClick="onClickBotonExit" />
 
     <include
         android:id="@+id/coint"
