--- a/app/src/main/res/layout/activity_my_items.xml
+++ b/app/src/main/res/layout/activity_my_items.xml
@@ -38,7 +38,7 @@
         android:layout_marginEnd="18dp"
         android:background="@android:drawable/ic_menu_close_clear_cancel"
         android:backgroundTint="#070707"
-        android:onClick="onClickBotonRetroceder" />
+        android:onClick="onClickBotonExit" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_recycler_view"
